--- a/.github/workflows/deployment1.yaml
+++ b/.github/workflows/deployment1.yaml
@@ -1,5 +1,5 @@
 name: Deployment1
-on: push
+on: [push, workflow_dispatch]
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -14,5 +14,8 @@ jobs:
         run: npm run test
       - name: Build code
         run: npm run build
-      - name: Deploy
-        run: echo "Deploying"
+      - name: Deploy to netlify
+        uses: jsmrcaga/action-netlify-deploy@v2.0.0
+        with:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH }}
+          NETLIFY_DEPLOY_TO_PROD: true
